--- a/projekt331.html
+++ b/projekt331.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM DO 70m² 45°</title>
+    <title>B O R Y S</title>
     <link rel="shortcut icon" href="icons/logo.png">
     <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
     <header>
-        <h1>DOM DO 70m² ZABUDOWY DACH 45°</h1>
+        <h1>B O R Y S</h1>
+		<hr>
 		<h2>WERSJA PODSTAWOWA</h2>
     </header>
 	
     <div class="container">
 	
         <div class="tile">
-		<img src="projekty/331.png" alt="Aksonometria">
+		<img src="projekty/331/1.png" alt="Aksonometria">
 		</div>
 			
         <div class="tile">
@@ -46,27 +47,30 @@
 		</div>
 		
         <div class="tile">
+				<h2>RZUT PRZYZIEMIA</h2>
 					<div class="project-status">
-						<a href="path/to/your/file.pdf" download class="download-btn">PDF A4</a>
-						<button class="download-btn" onclick="openModal('modal1', 'projekty/451.png')">👁️</button>
+						<a href="projekty/331/331_RZUT PRZYZIEMIA.pdf" download class="download-btn">PDF A4</a>
+						<button class="download-btn" onclick="openModal('modal1', 'projekty/331/2.png')">👁️</button>
 					</div>	
-				<img src="projekty/451.png" alt="Projekt 2">
+				<img src="projekty/331/2.png" alt="Projekt 2">
 		</div>
 		
         <div class="tile">
+				<h2>RZUT PODDASZA</h2>
 					<div class="project-status">
-						<a href="path/to/your/file.pdf" download class="download-btn">PDF A4</a>
-						<button class="download-btn" onclick="openModal('modal2', 'projekty/452.png')">👁️</button>
+						<a href="projekty/331/331_RZUT PODDASZA.pdf" download class="download-btn">PDF A4</a>
+						<button class="download-btn" onclick="openModal('modal2', 'projekty/331/3.png')">👁️</button>
 					</div>	
-		<img src="projekty/452.png" alt="Projekt 3">
+				<img src="projekty/331/3.png" alt="Projekt 3">
 		</div>
         
 		<div class="tile">
+				<h2>PRZEKRÓJ POPRZECZNY</h2>
 					<div class="project-status">
-						<a href="path/to/your/file.pdf" download class="download-btn">PDF A4</a>
-						<button class="download-btn" onclick="openModal('modal3', 'projekty/453.png')">👁️</button>
+						<a href="projekty/331/331_PRZEKRÓJ POPRZECZNY.pdf" download class="download-btn">PDF A4</a>
+						<button class="download-btn" onclick="openModal('modal3', 'projekty/331/4.png')">👁️</button>
 					</div>	
-		<img src="projekty/453.png" alt="Projekt 4">
+				<img src="projekty/331/4.png" alt="Projekt 4">
 		</div>
 
 		
@@ -95,8 +99,10 @@
 
 
 
-    <div class="footer">
-        <p>&copy; 2024</p>
+  <div class="footer">
+        <p>ARCHITECTURE in LAND DEVELOPMENT &copy; 2024<br>
+				ul. Wolińska 11d, 72-400 Kamień Pomorski<br>
+				all rights reserved by ANDRZEJ KURKA | tel. <a href="tel:+48790820114">790 820 114</a></p>
     </div>
 	
 		<script>
