--- a/projekt324.html
+++ b/projekt324.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM DO 70m² 45°</title>
+    <title>N A S T J A</title>
     <link rel="shortcut icon" href="icons/logo.png">
     <link rel="stylesheet" href="styles.css">
 
